# naplan-performance

./: README.md  app.py  pyproject.toml
data/: capital_expenditure.csv  enrolments.csv  naplan_results.csv  recurrent_income.csv
