[tool.poetry]
name = "naplan-performance"
version = "0.1.0"
description = "Dashboard of NAPLAN performance"
authors = ["Yass Eltahir <15998949+diabolical-ninja@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.3.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.9.1"
mypy = "^1.14.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
